test: fix integration test for PersonController.findAll